# langchain-pusdiklat

./: .gitignore  1_aplikasi_sederhana.ipynb  2_prompting.ipynb  3_tool.ipynb  4_custom_tool.ipynb  5_memory.ipynb  6_RAG.ipynb  README.md  example.env  main.py  mise.toml  pyproject.toml  requirements.txt
data/: demografi-jakarta.txt
