[project]
name = "langchain-pusdiklat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "wikipedia>=1.4.0",
]
